objects/DM_Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>DM_ACH_Code__c</fullName>
        <label>DM ACH Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Account_Type__c</fullName>
        <label>DM Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Saving</fullName>
                </value>
                <value>
                    <fullName>DM_Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Account_Usage__c</fullName>
        <label>DM Account Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Investor Trust Account</fullName>
                </value>
                <value>
                    <fullName>DM_Collections Trust Account</fullName>
                </value>
                <value>
                    <fullName>DM_Advance Trust Account</fullName>
                </value>
                <value>
                    <fullName>DM_Business Account</fullName>
                </value>
                <value>
                    <fullName>DM_Tax Withholding Account</fullName>
                </value>
                <value>
                    <fullName>DM_Borrower/Investor Account</fullName>
                </value>
                <value>
                    <fullName>DM_Broker Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accountss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Bank_Account_Number__c</fullName>
        <label>DM Bank Account Number</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>DM_Bank_Name__c</fullName>
        <label>DM Bank Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM CL Contract</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>DM Bank Accounts</relationshipLabel>
        <relationshipName>DM_Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_10__c</fullName>
        <label>DM Custom Field 7</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Routing_Number__c</fullName>
        <inlineHelpText>This is a nine digit number used to identify the financial institution in a transaction.</inlineHelpText>
        <label>DM Routing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Signature_Line__c</fullName>
        <label>DM Signature Line</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Summary</label>
        <type>Checkbox</type>
    </fields>
    <label>DM Bank Account</label>
    <nameField>
        <label>DM Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>